# quant_toy

./: .gitignore  AGENT.MD  README.md  pyproject.toml
docs/: report.md  task.md
docs/figures/: sector_summary.csv  strategy_metrics.csv
notebooks/: demo.ipynb
src/quant/: __init__.py  backtest.py  data_prepare.py  main.py  reporting.py  result_prepare.py  strategy.py
