[project]
name = "quant"
version = "0.1.0"
description = "Liquor-stock AKQuant backtest project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "akquant>=0.2.46",
    "akshare>=1.18.64",
]

[project.scripts]
quant-backtest = "quant.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant"]
